Fix TOC spacing

--- a/src/components/PostTOC.module.css
+++ b/src/components/PostTOC.module.css
@@ -8,14 +8,16 @@
   text-transform: uppercase;
   font-weight: 300;
   color: gray;
+  margin-bottom: 1em;
 }
 
 .heading {
   transition: color 0.2s ease;
+  line-height: 1.25em;
 }
 
 .headingLevel1 {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .headingLevel2 {
@@ -25,6 +27,13 @@
 
 .headingActive {
   color: #FF8484;
+}
+
+.tocList {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
 }
 
 @media screen and (max-width: 900px) {
